--- a/.github/workflows/changelog-required.yml
+++ b/.github/workflows/changelog-required.yml
@@ -1,43 +1,44 @@
-name: changelog-required
+# .github/workflows/changelog-required.yml
+name: Changelog check
 
 on:
   pull_request:
-    types:
-      - opened
-      - edited
-      - synchronize
-      - reopened
-      - ready_for_review
+    types: [opened, edited, synchronize]
 
 permissions:
+  contents: read
   pull-requests: read
 
 jobs:
   changelog:
     runs-on: ubuntu-latest
     steps:
-      - name: Ensure changelog updated for feat/fix PRs
+      - name: Require CHANGELOG update for feat/fix PR titles
         uses: actions/github-script@v7
         with:
+          result-encoding: string
           script: |
-            const core = require('@actions/core');
-            const title = context.payload.pull_request?.title ?? '';
+            const pr = context.payload.pull_request
+            const title = pr?.title ?? ''
             if (!title.startsWith('feat:') && !title.startsWith('fix:')) {
-              core.info('Changelog update not required for this PR title.');
-              return;
+              core.info('Changelog update not required for this PR title.')
+              return
             }
 
-            const prNumber = context.payload.pull_request.number;
-            const files = await github.paginate(github.rest.pulls.listFiles, {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: prNumber,
-              per_page: 100,
-            });
+            const files = await github.paginate(
+              github.rest.pulls.listFiles,
+              {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pr.number,
+                per_page: 100,
+              }
+            )
 
-            const hasChangelog = files.some((file) => file.filename === 'CHANGELOG.md');
+            const hasChangelog = files.some(f => f.filename === 'CHANGELOG.md')
+
             if (!hasChangelog) {
-              core.setFailed('feat/fix PRs must include a CHANGELOG.md update in the [Unreleased] section.');
+              core.setFailed('feat/fix PRs must include a CHANGELOG.md update in the [Unreleased] section.')
             } else {
-              core.info('CHANGELOG.md update detected.');
+              core.info('CHANGELOG.md update detected.')
             }
